environments/svd-dev/apps/app-svd-ocp-app-taxi/services/svd-ocp-app-taxi/base/config/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: svd-ocp-app-taxi
  namespace: svd-dev
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: svd-ocp-app-taxi
    weight: 100
  wildcardPolicy: None
